test/classes/initializers/errors/errHandling/ifStatements/thenThrowsPhase1.good
thenThrowsPhase1.chpl:12: In initializer:
thenThrowsPhase1.chpl:15: error: cannot call a throwing function outside of a try! before phase 2
